# kuatia

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  config.py  constraints.py  database.py  main.py  media_handlers.py  schemas.py
src/database/: manager.py  models.py  utils.py
src/invoice/: controller.py  dto.py  models.py  repository.py  schemas.py  service.py  services.py
src/issuer/: models.py  schemas.py
src/resources/: invoice.py
