[tool.poetry]
name = "kuatia"
version = "0.1.0"
description = "A simple invoice manager"
authors = ["Agustin Arce <agustinarceprincich@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
falcon = "^3.1.3"
msgspec = "^0.18.6"
uvicorn = "^0.30.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
alembic = "^1.13.2"
bcrypt = "^4.2.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
ruff = "^0.6.5"
tox = "^4.18.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
